<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vmLogin"
            type="com.smarthome.uenics.ucontrol.ui.login.VMLogin" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_color"
            tools:context=".ui.login.LoginActivity">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="center"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/login_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="23dp"
                android:layout_marginBottom="5dp"
                app:srcCompat="@drawable/agri_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/MyTextView.Heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_padding"
                android:gravity="center"
                android:background="#66000000"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/login_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <EditText
                android:id="@+id/login_email"
                style="@style/MyTextView.Border"
                android:layout_width="0dp"
                android:minHeight="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:drawableLeft="@drawable/user"
                android:layout_marginBottom="@dimen/activity_padding"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:text="@={vmLogin.email}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:drawableStart="@drawable/user" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                style="@style/MyTextView.Border"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:text="@={vmLogin.password}"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:drawableLeft="@drawable/password_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_email"
                android:drawableStart="@drawable/password_icon" />

            <CheckBox
                style="@style/MyTextView"
                android:id="@+id/remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/black"
                android:checked="@={vmLogin.isRemember}"
                android:text="@string/remember"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_pwd" />


            <Button
                style="@style/MyTextView.Heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginRight="@dimen/activity_padding"
                android:background="@color/colorPrimary"
                android:enabled="@{!vmLogin.isLoading}"
                android:onClick="@{()-> vmLogin.validateLogin()}"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remember" />



            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/address_looking_up"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="@{vmLogin.isLoading ? View.VISIBLE : View.GONE}" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>



</layout>

